[gd_scene load_steps=2 format=3 uid="uid://login001"]

[ext_resource type="Script" path="res://scripts/login/login.gd" id="1"]

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.08, 0.12, 0.18, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
text = "TIEN LEN MIEN NAM"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtitle" type="Label" parent="VBox"]
layout_mode = 2
text = "Southern Vietnamese Card Game"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="UsernameLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Username"

[node name="UsernameInput" type="LineEdit" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Enter username..."
max_length = 30

[node name="PasswordLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Password"

[node name="PasswordInput" type="LineEdit" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Enter password..."
secret = true
max_length = 50

[node name="Spacer2" type="Control" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="LoginButton" type="Button" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
text = "LOGIN"

[node name="RegisterButton" type="Button" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
text = "REGISTER"

[node name="StatusLabel" type="Label" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
text = ""
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="pressed" from="VBox/LoginButton" to="." method="_on_login_pressed"]
[connection signal="pressed" from="VBox/RegisterButton" to="." method="_on_register_pressed"]
